updated controller and Docs
