# controllers/appointmentController.js
@@ -73,21 +73,6 @@ const create = async (req, res) => {
     }
 }
 
-const searchAgent = async (req, res) => {
-    try {
-        if(res === []){
-            res.status(404).json({error: "Agent ID not found"})
-        }
-        appointment = await Appointment.find({ 'user_data': {'agent_id' : req.params.id }});
-        return appointment.length === 0 ? res.status(404).json({error: "Agent ID not found"}) : res.status(200).json(appointment);
-        
-    }catch(e) {
-        res.status(400).json({error: "Invalid agent ID"})
-    }
-
-    }
-
-
 const handleErrors = (e) => {
     if(e instanceof mongoose.Error.ValidationError){
         console.log(e.errors);
@@ -104,6 +89,5 @@ module.exports = {
     show,
     create,
     update,
-    destroy,
-    searchAgent
+    destroy
 }
